css/botan.css
/* ... */
.nav-btn[data-v-5445dac8]:hover {
    background-color: white;
}

/* dropdown with block and report buttons */
.dropdown[data-v-5445dac8] {
    color: black;
    background-color: transparent;
    background-image: url('https://files.weebsquad.moe/LaBFeCL9.png');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

.dropdown[data-v-5445dac8]:hover {
    color: black;
    background-color: transparent;
    background-image: url('https://files.weebsquad.moe/LaBFeCL9.png');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

.el-icon-arrow-down[data-v-5445dac8]:before {
    content: "\E603";
    text-shadow: rgb(255, 255, 255) 1px 0px 0px, rgb(255, 255, 255) 0.540302px 0.841471px 0px, rgb(255, 255, 255) -0.416147px 0.909297px 0px, rgb(255, 255, 255) -0.989992px 0.14112px 0px, rgb(255, 255, 255) -0.653644px -0.756802px 0px, rgb(255, 255, 255) 0.283662px -0.958924px 0px, rgb(255, 255, 255) 0.96017px -0.279415px 0px;
}

/* Disable 'follows you' badge */
.follower-badge[data-v-5445dac8] {
    display: none;
}

/* remove 'using custom css' notice */
.about[data-v-2cf72664] .markdown h5 a {
    display: none;
}

/* AL Logo replacement */
.logo img[data-v-4fbac4e1] {
    height: 50px;
    width: auto;
    content: url(https://files.weebsquad.moe/6thojTOk.png);
}

/* navbar */
.site-theme-dark .nav-unscoped.transparent {
    background: rgba(var(--color-foreground), .5);
}

.site-theme-dark .nav-unscoped.transparent:hover {
    background: rgba(var(--color-foreground), .8);
}

.site-theme-dark .nav-unscoped {
    background: rgba(var(--color-foreground), 1);
}

/* Links in navbar and below banner */
.link[data-v-4fbac4e1],
.nav .link[data-v-5445dac8] {
    font-family: 'augie';
    font-weight: 900;
    color: #000;
    text-shadow: rgb(255, 255, 255) 3px 0px 0px, rgb(255, 255, 255) 2.83487px 0.981584px 0px, rgb(255, 255, 255) 2.35766px 1.85511px 0px, rgb(255, 255, 255) 1.62091px 2.52441px 0px, rgb(255, 255, 255) 0.705713px 2.91581px 0px, rgb(255, 255, 255) -0.287171px 2.98622px 0px, rgb(255, 255, 255) -1.24844px 2.72789px 0px, rgb(255, 255, 255) -2.07227px 2.16926px 0px, rgb(255, 255, 255) -2.66798px 1.37182px 0px, rgb(255, 255, 255) -2.96998px 0.42336px 0px, rgb(255, 255, 255) -2.94502px -0.571704px 0px, rgb(255, 255, 255) -2.59586px -1.50383px 0px, rgb(255, 255, 255) -1.96093px -2.27041px 0px, rgb(255, 255, 255) -1.11013px -2.78704px 0px, rgb(255, 255, 255) -0.137119px -2.99686px 0px, rgb(255, 255, 255) 0.850987px -2.87677px 0px, rgb(255, 255, 255) 1.74541px -2.43999px 0px, rgb(255, 255, 255) 2.44769px -1.73459px 0px, rgb(255, 255, 255) 2.88051px -0.838247px 0px;
}

/* below banner links hover */
.nav .link[data-v-5445dac8]:hover {
    color: #d3d5f3;
}

/* custom search button */
.search[data-v-4fbac4e1] {
    cursor: pointer;
}

.search[data-v-4fbac4e1] svg {
    display: none;
}

.search[data-v-4fbac4e1]::after {
    content: '';
    color: transparent;
    background-image: url(https://files.weebsquad.moe/OZPYVOSr.png);
    background-color: transparent;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    padding: 10px 20px;
    transition: .2s;
}

.search[data-v-4fbac4e1]:hover::after {
    content: '';
    color: transparent;
    background-image: url(https://files.weebsquad.moe/OZPYVOSr.png);
    background-color: transparent;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    padding: 10px 20px;
    filter: brightness(1.7);
}

/* svg elements */
.user .chevron[data-v-4fbac4e1],
.markdown-editor>div {
    font-weight: 900;
    color: #000;
    stroke: #fff;
    stroke-width: 30px;
}

.markdown-editor>[title="Image"],
.markdown-editor>[title="Youtube Video"],
.markdown-editor>[title="WebM Video"] {
    color: rgb(99, 0, 0);
}

/* section headers and username */
.section-header[data-v-514856af],
.section-header[data-v-aedb6876],
.section-header[data-v-45543a61],
.medialist.table .section-name,
.name[data-v-5445dac8],
.section-header[data-v-93c5960c],
.section-header[data-v-09492909] {
    font-family: 'augie';
    font-weight: 900;
    color: #000;
    text-shadow: rgb(255, 255, 255) 3px 0px 0px, rgb(255, 255, 255) 2.83487px 0.981584px 0px, rgb(255, 255, 255) 2.35766px 1.85511px 0px, rgb(255, 255, 255) 1.62091px 2.52441px 0px, rgb(255, 255, 255) 0.705713px 2.91581px 0px, rgb(255, 255, 255) -0.287171px 2.98622px 0px, rgb(255, 255, 255) -1.24844px 2.72789px 0px, rgb(255, 255, 255) -2.07227px 2.16926px 0px, rgb(255, 255, 255) -2.66798px 1.37182px 0px, rgb(255, 255, 255) -2.96998px 0.42336px 0px, rgb(255, 255, 255) -2.94502px -0.571704px 0px, rgb(255, 255, 255) -2.59586px -1.50383px 0px, rgb(255, 255, 255) -1.96093px -2.27041px 0px, rgb(255, 255, 255) -1.11013px -2.78704px 0px, rgb(255, 255, 255) -0.137119px -2.99686px 0px, rgb(255, 255, 255) 0.850987px -2.87677px 0px, rgb(255, 255, 255) 1.74541px -2.43999px 0px, rgb(255, 255, 255) 2.44769px -1.73459px 0px, rgb(255, 255, 255) 2.88051px -0.838247px 0px;
}

/* reset filter stuff */
.section-header[data-v-09492909] .el-dropdown {
    text-shadow: none;
    color: rgb(var(--color-text-lighter));
}

/* milestone stats */
.stat .value[data-v-815ccddc],
.hohMilestones .stat .value {
    font-weight: 900;
    color: #000;
    text-shadow: rgb(255, 255, 255) 2px 0px 0px, rgb(255, 255, 255) 1.75517px 0.958851px 0px, rgb(255, 255, 255) 1.0806px 1.68294px 0px, rgb(255, 255, 255) 0.141474px 1.99499px 0px, rgb(255, 255, 255) -0.832294px 1.81859px 0px, rgb(255, 255, 255) -1.60229px 1.19694px 0px, rgb(255, 255, 255) -1.97998px 0.28224px 0px, rgb(255, 255, 255) -1.87291px -0.701566px 0px, rgb(255, 255, 255) -1.30729px -1.5136px 0px, rgb(255, 255, 255) -0.421592px -1.95506px 0px, rgb(255, 255, 255) 0.567324px -1.91785px 0px, rgb(255, 255, 255) 1.41734px -1.41108px 0px, rgb(255, 255, 255) 1.92034px -0.558831px 0px;
}
/* ... */

